# axum2prod

./: .env  Cargo.toml  build.rs  configuration.yaml
.github/workflows/: general.yml
crates/axum2prod/: Cargo.toml
crates/axum2prod/src/: configuration.rs  lib.rs  main.rs  request_id.rs  telemetry.rs  test_helpers.rs
crates/axum2prod/src/http/: error.rs  mod.rs
crates/axum2prod/src/routes/: subscriptions.rs
crates/axum2prod/tests/: health_check.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/server/src/routes/: subscriptions.rs
server/: Cargo.toml
server/src/: configuration.rs  lib.rs
server/src/http/: mod.rs
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
