[package]
name = "axum2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "axum2prod"

[dependencies]
axum = "0.6.9"
hyper = "0.14.24"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11.14"
