[package]
name = "axum2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "axum2prod"

[dependencies]
anyhow = "1.0.69"
axum = "0.6.9"
clap = { version = "4.1.7", features = ["derive", "env"] }
config = "0.13.3"
hyper = "0.14.24"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["macros", "uuid", "postgres", "chrono", "migrate", "all-types", "runtime-tokio-native-tls"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11.14"
