[package]
name = "axum2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "axum2prod"

[dependencies]
anyhow = "1.0.69"
axum = "0.6.9"
chrono = { version = "0.4.23", default-features = false, features = ["clock", "iana-time-zone", "js-sys", "std", "wasm-bindgen", "wasmbind", "winapi"] }
clap = { version = "4.1.7", features = ["derive", "env"] }
config = "0.13.3"
env_logger = "0.10.0"
hyper = "0.14.24"
log = "0.4.17"
macros = { path = "../macros" }
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["macros", "uuid", "postgres", "chrono", "migrate", "all-types", "runtime-tokio-native-tls"] }
thiserror = "1.0.38"
time = "0.3.20"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing-subscriber = "0.3.16"
url = "2.3.1"
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.14"
rusty-fork = "0.3.0"
