[package]
name = "axum2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "axum2prod"

[dependencies]
anyhow = "1.0.69"
axum = "0.6.9"
chrono = { version = "0.4.23", default-features = false, features = ["clock", "iana-time-zone", "js-sys", "std", "wasm-bindgen", "wasmbind", "winapi"] }
clap = { version = "4.1.7", features = ["derive", "env"] }
config = "0.13.3"
hyper = "0.14.24"
macros = { path = "../macros" }
once_cell = "1.17.1"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["macros", "uuid", "postgres", "chrono", "migrate", "all-types", "runtime-tokio-native-tls"] }
thiserror = "1.0.38"
time = "0.3.20"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
url = "2.3.1"
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.14"
rusty-fork = "0.3.0"
